* Truncate sentences based on available width than based on words. fixes #6 * HeaderBar issue in appDetails fixed

--- a/parser_html/static/styles/style.css
+++ b/parser_html/static/styles/style.css
@@ -224,3 +224,9 @@ a:hover {
 #hidden{
     display: none;
 }
+
+.truncate{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
